// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Taxes Api all() parse the returned data correctly 1`] = `
[
  {
    "id": 1,
    "is_group": false,
    "is_rate": true,
    "is_used": true,
    "name": "T.V.A.",
    "value": /* Decimal Instance => */ "20",
  },
  {
    "id": 2,
    "is_group": false,
    "is_rate": true,
    "is_used": false,
    "name": "T.V.A.",
    "value": /* Decimal Instance => */ "5.5",
  },
  {
    "id": 3,
    "is_group": false,
    "is_rate": false,
    "is_used": true,
    "name": "Taxe écologique",
    "value": /* Decimal Instance => */ "1",
  },
  {
    "components": [
      {
        "is_rate": true,
        "name": "T.V.A",
        "value": /* Decimal Instance => */ "20",
      },
      {
        "is_rate": false,
        "name": "Éco-participation",
        "value": /* Decimal Instance => */ "2",
      },
    ],
    "id": 4,
    "is_group": true,
    "is_used": false,
    "name": "Taxe meuble",
  },
  {
    "components": [
      {
        "is_rate": true,
        "name": "TPS",
        "value": /* Decimal Instance => */ "5",
      },
      {
        "is_rate": true,
        "name": "TVQ",
        "value": /* Decimal Instance => */ "9.975",
      },
    ],
    "id": 5,
    "is_group": true,
    "is_used": true,
    "name": "Taxe Québec (TPS + TVQ)",
  },
]
`;

exports[`Taxes Api create() parse the returned data correctly (with #1) 1`] = `
{
  "id": 1,
  "is_group": false,
  "is_rate": true,
  "is_used": true,
  "name": "T.V.A.",
  "value": /* Decimal Instance => */ "20",
}
`;

exports[`Taxes Api create() parse the returned data correctly (with #2) 1`] = `
{
  "id": 2,
  "is_group": false,
  "is_rate": true,
  "is_used": false,
  "name": "T.V.A.",
  "value": /* Decimal Instance => */ "5.5",
}
`;

exports[`Taxes Api create() parse the returned data correctly (with #3) 1`] = `
{
  "id": 3,
  "is_group": false,
  "is_rate": false,
  "is_used": true,
  "name": "Taxe écologique",
  "value": /* Decimal Instance => */ "1",
}
`;

exports[`Taxes Api create() parse the returned data correctly (with #4) 1`] = `
{
  "components": [
    {
      "is_rate": true,
      "name": "T.V.A",
      "value": /* Decimal Instance => */ "20",
    },
    {
      "is_rate": false,
      "name": "Éco-participation",
      "value": /* Decimal Instance => */ "2",
    },
  ],
  "id": 4,
  "is_group": true,
  "is_used": false,
  "name": "Taxe meuble",
}
`;

exports[`Taxes Api create() parse the returned data correctly (with #5) 1`] = `
{
  "components": [
    {
      "is_rate": true,
      "name": "TPS",
      "value": /* Decimal Instance => */ "5",
    },
    {
      "is_rate": true,
      "name": "TVQ",
      "value": /* Decimal Instance => */ "9.975",
    },
  ],
  "id": 5,
  "is_group": true,
  "is_used": true,
  "name": "Taxe Québec (TPS + TVQ)",
}
`;

exports[`Taxes Api update() parse the returned data correctly (with #1) 1`] = `
{
  "id": 1,
  "is_group": false,
  "is_rate": true,
  "is_used": true,
  "name": "T.V.A.",
  "value": /* Decimal Instance => */ "20",
}
`;

exports[`Taxes Api update() parse the returned data correctly (with #2) 1`] = `
{
  "id": 2,
  "is_group": false,
  "is_rate": true,
  "is_used": false,
  "name": "T.V.A.",
  "value": /* Decimal Instance => */ "5.5",
}
`;

exports[`Taxes Api update() parse the returned data correctly (with #3) 1`] = `
{
  "id": 3,
  "is_group": false,
  "is_rate": false,
  "is_used": true,
  "name": "Taxe écologique",
  "value": /* Decimal Instance => */ "1",
}
`;

exports[`Taxes Api update() parse the returned data correctly (with #4) 1`] = `
{
  "components": [
    {
      "is_rate": true,
      "name": "T.V.A",
      "value": /* Decimal Instance => */ "20",
    },
    {
      "is_rate": false,
      "name": "Éco-participation",
      "value": /* Decimal Instance => */ "2",
    },
  ],
  "id": 4,
  "is_group": true,
  "is_used": false,
  "name": "Taxe meuble",
}
`;

exports[`Taxes Api update() parse the returned data correctly (with #5) 1`] = `
{
  "components": [
    {
      "is_rate": true,
      "name": "TPS",
      "value": /* Decimal Instance => */ "5",
    },
    {
      "is_rate": true,
      "name": "TVQ",
      "value": /* Decimal Instance => */ "9.975",
    },
  ],
  "id": 5,
  "is_group": true,
  "is_used": true,
  "name": "Taxe Québec (TPS + TVQ)",
}
`;
